--- a/style.css
+++ b/style.css
@@ -1,104 +1,123 @@
-body{
-    background-color: antiquewhite;
-    display: flex;
-    justify-content: center;
+body {
+  background-color: antiquewhite;
+  display: flex;
+  justify-content: center;
 }
 
-.wrapper{
-    width: 750px;
-    height: 500px;
-    background-color: white;
-    position: relative;
-    border: 3px solid #fff;
-    overflow: hidden;
+.wrapper {
+  width: 750px;
+  height: 500px;
+  background-color: white;
+  position: relative;
+  border: 3px solid #fff;
+  overflow: hidden;
 }
-.wrapper .images{
-    width: 100%;
-    height: 100%;
-    display: flex;
+.wrapper .images {
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
-.img1{
-    width: 100%;
-    height: 100%;
-    background-image: url("./1.jpg");
-    background-size: cover;
+.img1 {
+  width: 100%;
+  height: 100%;
+  background-image: url("./1.jpg");
+  background-size: cover;
 }
-.img2{
-    width: 50%;
-    height: 100%;
-    background-image: url("./2.jpg");
-    background-size: cover;
-    position: absolute;
-    
-}
-
-.slider{
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: 9999;
-}
-.slider input{
-    width: 100%;
-    -webkit-appearance: none;
-    background: none;
+.img2 {
+  width: 50%;
+  height: 100%;
+  background-image: url("./2.jpg");
+  background-size: cover;
+  position: absolute;
 }
 
-.slider input::-webkit-slider-thumb{
-    height: 500px;
-    width: 3px;
-    background-color: none;
-    -webkit-appearance: none;
-    cursor: col-resize;
-} 
-.drag-line{
-    width: 3px;
-    height: 500px;
-    background-color: #fff;
-    position: absolute;
-    left: 50.1%;
-    pointer-events: none;
+.slider {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+}
+.slider input {
+  width: 100%;
+  -webkit-appearance: none;
+  background: none;
 }
 
-.drag-line::after, .drag-line::before{
-    position: absolute;
-    width: 100%;
-    height: 224px;
-    background-color: #fff;
-    content: "";
+.slider input::-webkit-slider-thumb {
+  height: 500px;
+  width: 3px;
+  background-color: none;
+  -webkit-appearance: none;
+  cursor: col-resize;
 }
-.drag-line::after{
-    bottom: 0;
-}
-.drag-line::before{
-    top: 0;
-}
-
-.drag-line span{
-    position: absolute;
-    width: 42px;
-    height: 42px;
-    border: 3px solid #fff;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    border-radius: 50%;
-}
-.drag-line span::after, .drag-line span::before{
-    position: absolute;
-    content: "";
-    border: 10px solid transparent;
-    top: 50%;
-    border-bottom-width: 0px;
-    border-right-width: 0px;
-    transform: translate(-50%, -50%) rotate(45deg);
+.drag-line {
+  width: 3px;
+  height: 500px;
+  background-color: #fff;
+  position: absolute;
+  left: 50.1%;
+  pointer-events: none;
 }
 
-.drag-line span::before{
-    border-left-color: #fff;
-    left: 40%;
+.drag-line::after,
+.drag-line::before {
+  position: absolute;
+  width: 100%;
+  height: 224px;
+  background-color: #fff;
+  content: "";
 }
-.drag-line span::after{
-    border-top-color: #fff;
-    left: 60%;
+.drag-line::after {
+  bottom: 0;
+}
+.drag-line::before {
+  top: 0;
+}
+
+.drag-line span {
+  position: absolute;
+  width: 42px;
+  height: 42px;
+  border: 3px solid #fff;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+}
+.drag-line span::after,
+.drag-line span::before {
+  position: absolute;
+  content: "";
+  border: 10px solid transparent;
+  top: 50%;
+  border-bottom-width: 0px;
+  border-right-width: 0px;
+  transform: translate(-50%, -50%) rotate(45deg);
+}
+
+.drag-line span::before {
+  border-left-color: #fff;
+  left: 40%;
+}
+.drag-line span::after {
+  border-top-color: #fff;
+  left: 60%;
+}
+
+/* safe jone */
+.slider_wrapper {
+  width: 750px;
+  height: 500px;
+  background-color: white;
+  position: relative;
+  border: 3px solid #fff;
+  overflow: hidden;
+}
+img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+#after_img {
+  clip-path: polygon(0 0, 50% 0, 50% 100%, 0 100%);
 }
